...
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<android.support.v7.widget.RecyclerView
		android:id="@+id/main_activity_recycler_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:overScrollMode="never"
		android:scrollbars="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toolbar" />
...
