...

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<android.support.v7.widget.RecyclerView
				android:id="@+id/recycler_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:overScrollMode="never"
				android:scrollbars="vertical" />

			<br.tbm.github.api.commons.view.components.CustomMontserratRegularTextView
...
